test/arrays/localizeConstDom.good
all var
After A
In initCopy(definedConst=false)domain definedConst: true
Normal path
After B
After C
In initCopy(definedConst=false)domain definedConst: true
Localize path
After D

const A, var others
After A
In initCopy(definedConst=false)domain definedConst: true
Normal path
After B
After C
In initCopy(definedConst=false)domain definedConst: true
Localize path
After D

var A, const others
After A
In initCopy(definedConst=true)domain definedConst: true
Normal path
After B
After C
In initCopy(definedConst=true)domain definedConst: true
Localize path
After D

var Dom, var A, const others
After A
In initCopy(definedConst=true)domain definedConst: false
Normal path
After B
After C
In initCopy(definedConst=true)domain definedConst: false
Normal path
After D
localizeConstDom.chpl:68: error: cannot access remote data in local block
